<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/mylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/txt_welcome_tit"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="@font/font2"
            android:text="@string/welcome_kit"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txt_welcome_desc"
            android:alpha="0"
            tools:alpha="100"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="@font/font1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/welcome_des" />
    </LinearLayout>

    <com.example.riystory.customview.RiyButton
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:alpha="0"
        tools:alpha="100"
        android:id="@+id/btnLogin"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvRegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginStart="177dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font2"
        android:layout_marginEnd="177dp"
        android:text="@string/for_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.example.riystory.customview.RiyButton2
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:alpha="0"
        tools:alpha="100"
        android:id="@+id/btnRegister"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegis" />

</androidx.constraintlayout.widget.ConstraintLayout>